# nexus-engine

./: .coderabbit.yaml  .editorconfig  .env.example  .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  audit.toml  biome.json  clippy.toml  codecov.yml  deny.toml  naga-validate.toml  package.json  ruff.toml  rust-toolchain.toml  rustfmt.toml  tarpaulin.toml
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: adr-author.md  agent-api-engineer.md  agent-sdk-specialist.md  ai-asset-gen-specialist.md  anticheat-specialist.md  architect.md  asset-compression-specialist.md  asset-import-specialist.md  asset-pipeline-engineer.md  asset-registry-specialist.md  asset-streaming-specialist.md  audio-engineer.md  battleroyal-genre.md  benchmark-coordinator.md  canary-and-rollback-engineer.md  cellular-automata-engineer.md  character-controller-specialist.md  ci-engineer.md  code-reviewer.md  codesigning-specialist.md  contract-author.md  coverage-auditor.md  crash-triager.md  crate-author.md  crate-consumer-advisor.md  crate-curator.md  decision-log-keeper.md  deploy-engineer.md  determinism-auditor.md  docs-style-enforcer.md  dsp-specialist.md  ecs-engineer.md  editor-debug-specialist.md  editor-engineer.md  editor-rpc-parity-auditor.md  events-engineer.md  feature-flag-specialist.md  fighting-genre.md  fluid-specialist.md  fps-genre.md  (+79 more)
.claude/commands/: bench.md  contract.md  deploy.md  impl.md  onboard.md  parallel.md  release.md  review.md  scenario.md  spec.md  sync-glossary.md  triage.md
.config/: nextest.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  labeler.yml
benches/: .keep  README.md
benches/baselines/: .keep
ci/: .keep
crates/genres/nexus-genre-fighting/: Cargo.toml  README.md
crates/genres/nexus-genre-fighting/src/: lib.rs
crates/genres/nexus-genre-horror/: Cargo.toml  README.md
crates/genres/nexus-genre-horror/src/: lib.rs
crates/genres/nexus-genre-racing/: Cargo.toml  README.md
crates/genres/nexus-genre-racing/src/: lib.rs
crates/genres/nexus-genre-rpg/: Cargo.toml  README.md
crates/genres/nexus-genre-rpg/src/: lib.rs
crates/genres/nexus-genre-rts/: Cargo.toml  README.md
crates/genres/nexus-genre-rts/src/: lib.rs
crates/genres/nexus-genre-towdef/: Cargo.toml  README.md
crates/genres/nexus-genre-towdef/src/: lib.rs
crates/genres/nexus-genre-visualnovel/: Cargo.toml  README.md
crates/genres/nexus-genre-visualnovel/src/: lib.rs
crates/nexus-agent/: Cargo.toml  README.md
crates/nexus-agent/src/: lib.rs
crates/nexus-assets/: Cargo.toml  README.md
crates/nexus-assets/src/: lib.rs
crates/nexus-audio/: Cargo.toml  README.md
crates/nexus-audio/src/: lib.rs
crates/nexus-cli/: Cargo.toml  README.md
crates/nexus-cli/src/: main.rs
crates/nexus-core/: Cargo.toml  README.md
crates/nexus-core/src/: lib.rs
crates/nexus-editor/: Cargo.toml  README.md
crates/nexus-editor/src/: lib.rs
crates/nexus-engine/: Cargo.toml  README.md
crates/nexus-engine/src/: lib.rs
crates/nexus-hal/: Cargo.toml  README.md
crates/nexus-hal/src/: lib.rs
crates/nexus-merge/: Cargo.toml  README.md
crates/nexus-merge/src/: lib.rs
crates/nexus-net/: Cargo.toml  README.md
crates/nexus-net/src/: lib.rs
crates/nexus-physics/: Cargo.toml  README.md
crates/nexus-renderer/: Cargo.toml  README.md
crates/nexus-renderer/shaders/: .keep
crates/nexus-renderer/src/: lib.rs
crates/nexus-script/: Cargo.toml  README.md
crates/nexus-script/src/: lib.rs
crates/sdks/nexus-agent-sdk-rs/: Cargo.toml  README.md
crates/sdks/nexus-agent-sdk-rs/src/: lib.rs
crates/styles/nexus-style-2d/: Cargo.toml  README.md
crates/styles/nexus-style-2d/src/: lib.rs
crates/styles/nexus-style-mixed/: Cargo.toml  README.md
crates/styles/nexus-style-mixed/src/: lib.rs
crates/styles/nexus-style-npr/: Cargo.toml  README.md
crates/styles/nexus-style-npr/src/: lib.rs
crates/styles/nexus-style-pbr/: Cargo.toml  README.md
crates/styles/nexus-style-pbr/src/: lib.rs
docs/: INDEX.md  INTEGRATION-REPORT.md  README.md
docs/architecture/: 00-vision.md  01-principles.md  02-system-map.md  03-tech-stack.md  04-workspace-layout.md  06-modularity.md  07-extend-dont-fork.md  08-compose-dont-build.md  benchmarks-pending.md  cross-agent-flags.md  decisions-open.md  decisions-resolved.md  feature-flag-matrix.md  proposed-law-14.md
docs/contracts/: core-agent.md  core-audio.md  core-networking.md  core-physics.md  core-renderer.md  core-scripting.md  physics-renderer.md  renderer-assets.md
docs/game-template/: aaa-path.md  cli.md  nexus-toml.md  overview.md  structure.md  weekend-mvp.md
docs/games/: nexus-fps.md  nexus-platformer.md  nexus-rpg.md  nexus-rts.md  overview.md
docs/guides/: adr-format.md  ai-dev-onboarding.md  ci-and-scripts.md  coderabbit.md  contract-format.md  contribution.md  cross-linking.md  extend-not-fork-cookbook.md  file-conventions.md  github-graphql-cookbook.md  glossary.md  integration-team.md  mastermind-pr-loop.md  merge-system.md  parallelism-doctrine.md  pr-protocol.md  pr-workflow.md  scripts-for-ai-agents.md  scripts-overview.md  scripts-write-your-own.md  spec-format.md  style-guide.md  subagent-fleet-style.md  subagent-fleet.md
docs/initial/: spawn.md  vision.md
fuzz/: .keep  README.md
games/nexus-fps/: Cargo.toml  README.md
games/nexus-fps/src/: main.rs
games/nexus-platformer/: Cargo.toml  README.md
games/nexus-platformer/src/: main.rs
logs/: .keep  README.md
scripts/: bench  biome.json  bootstrap  build  check  index-scripts  index.json  lint-scripts  manifest.toml  new-script  package.json  release-engine  replay  scenario  symbols-upload  sync-docs-index  test  triage-issues  tsconfig.json
tmp/: .keep  README.md
tools/nexus-codegen/: Cargo.toml  README.md
tools/nexus-codegen/src/: main.rs
tools/nexus-scenario/: Cargo.toml  README.md
tools/nexus-scenario/src/: main.rs
(+433 files in other folders)
