[package]
name = "nexus-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Agent API: JSON-RPC server, headless driver, telemetry stream, scenario runner, replay."
readme = "README.md"

[package.metadata.nexus]
spec = "docs/specs/agent/overview.md"
laws = ["1", "2", "3", "7", "8", "9", "10", "11", "12", "13"]

[lints]
workspace = true

[dependencies]
nexus-core = { path = "../nexus-core" }
nexus-script = { path = "../nexus-script" }
nexus-net = { path = "../nexus-net" }
