# SPDX-License-Identifier: MIT
# Copyright (c) 2026 Nexus Engine contributors

[package]
name = "nexus-assets"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Asset registry, import, streaming, compression, LOD, AI generation bridge."
readme = "README.md"

[package.metadata.nexus]
spec = "docs/specs/assets/overview.md"
laws = ["1", "2", "3", "7", "10", "11", "12"]

[lints]
workspace = true

[dependencies]
nexus-core = { path = "../nexus-core", version = "0.1.0" }
nexus-hal = { path = "../nexus-hal", version = "0.1.0" }
