# SPDX-License-Identifier: MIT
# Copyright (c) 2026 Nexus Engine contributors

[package]
name = "nexus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rails-style scaffolder CLI: nexus new / add / generate / build / test / deploy / agent."
readme = "README.md"

[package.metadata.nexus]
spec = "docs/game-template/cli.md"
laws = ["1", "2", "7", "10", "11"]

[lints]
workspace = true

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
