[package]
name = "nexus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ECS, scheduler, jobs, memory, math, events, structured error, telemetry bus."
readme = "README.md"

[package.metadata.nexus]
spec = "docs/specs/core/ecs.md"
laws = ["1", "3", "5", "6", "7", "9", "10", "11", "12"]

[lints]
workspace = true

[features]
default = ["headless", "parallel", "serde"]
headless = []
parallel = []
serde = []

[dependencies]
