[package]
name = "nexus-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Public umbrella facade. Re-exports curated public surface of all engine crates."
readme = "README.md"

[package.metadata.nexus]
spec = "docs/architecture/04-workspace-layout.md"
laws = ["2", "7", "14"]

[lints]
workspace = true

[dependencies]
nexus-core = { path = "../nexus-core" }
nexus-hal = { path = "../nexus-hal" }
nexus-assets = { path = "../nexus-assets" }
nexus-renderer = { path = "../nexus-renderer" }
nexus-physics = { path = "../nexus-physics" }
nexus-audio = { path = "../nexus-audio" }
nexus-net = { path = "../nexus-net" }
nexus-script = { path = "../nexus-script" }
nexus-agent = { path = "../nexus-agent" }
