# SPDX-License-Identifier: MIT
# Copyright (c) 2026 Nexus Engine contributors

[package]
name = "nexus-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Public umbrella facade. Re-exports curated public surface of all engine crates."
readme = "README.md"

[package.metadata.nexus]
spec = "docs/architecture/04-workspace-layout.md"
laws = ["2", "7", "14"]

[lints]
workspace = true

[dependencies]
nexus-core = { path = "../nexus-core", version = "0.1.0" }
nexus-hal = { path = "../nexus-hal", version = "0.1.0" }
nexus-assets = { path = "../nexus-assets", version = "0.1.0" }
nexus-renderer = { path = "../nexus-renderer", version = "0.1.0" }
nexus-physics = { path = "../nexus-physics", version = "0.1.0" }
nexus-audio = { path = "../nexus-audio", version = "0.1.0" }
nexus-net = { path = "../nexus-net", version = "0.1.0" }
nexus-script = { path = "../nexus-script", version = "0.1.0" }
nexus-agent = { path = "../nexus-agent", version = "0.1.0" }
