[package]
name = "nexus-hal"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hardware abstraction layer: window, input, filesystem, clock, thread pool."
readme = "README.md"

[package.metadata.nexus]
spec = "docs/specs/core/hal.md"
laws = ["1", "3", "7", "8", "10", "11"]

[lints]
workspace = true

[dependencies]
nexus-core = { path = "../nexus-core" }
