# SPDX-License-Identifier: MIT
# Copyright (c) 2026 Nexus Engine contributors

[package]
name = "nexus-merge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Lint rule library used by the AI maintainer pipeline. Enforces the 15 Laws."
readme = "README.md"

[package.metadata.nexus]
spec = "docs/guides/merge-system.md"
laws = ["1", "2", "3", "6", "7", "9", "10", "11", "12", "13", "14", "15"]

[lints]
workspace = true

[dependencies]
