# SPDX-License-Identifier: MIT
# Copyright (c) 2026 Nexus Engine contributors

[package]
name = "nexus-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Render graph, wgpu backend, PBR materials, shaders, post-processing, particles, terrain."
readme = "README.md"

[package.metadata.nexus]
spec = "docs/specs/renderer/overview.md"
laws = ["1", "2", "3", "5", "7", "8", "10", "11", "12"]

[lints]
workspace = true

[dependencies]
nexus-core = { path = "../nexus-core", version = "0.1.0" }
nexus-hal = { path = "../nexus-hal", version = "0.1.0" }
nexus-assets = { path = "../nexus-assets", version = "0.1.0" }
