[package]
name = "nexus-script"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Lua + Rune scripting integration, hot reload, sandbox."
readme = "README.md"

[package.metadata.nexus]
spec = "docs/specs/scripting/overview.md"
laws = ["1", "2", "3", "6", "7", "10", "11", "12"]

[lints]
workspace = true

[dependencies]
nexus-core = { path = "../nexus-core" }
