# SPDX-License-Identifier: MIT
# Copyright (c) 2026 Nexus Engine contributors

[package]
name = "nexus-fps"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Demo FPS game — integration test of the full stack."
readme = "README.md"

[package.metadata.nexus]
spec = "docs/games/nexus-fps.md"
laws = ["2", "4", "7", "8", "11", "12", "14"]

[lints]
workspace = true

[[bin]]
name = "nexus-fps"
path = "src/main.rs"

[dependencies]
