[package]
name = "nexus-platformer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Demo platformer game — integration test of the full stack."
readme = "README.md"

[package.metadata.nexus]
spec = "docs/games/nexus-platformer.md"
laws = ["2", "4", "7", "8", "11", "12", "14"]

[lints]
workspace = true

[[bin]]
name = "nexus-platformer"
path = "src/main.rs"

[dependencies]
