[package]
name = "nexus-genre-fighting"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Fighting genre module."
readme = "README.md"

[package.metadata.nexus]
spec = "docs/specs/genres/fighting.md"
laws = ["2", "3", "7", "11", "12", "14"]

[lints]
workspace = true

[dependencies]
nexus-core = { path = "../../nexus-core" }
nexus-script = { path = "../../nexus-script" }
