[package]
name = "nexus-genre-rpg"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "RPG genre module: ECS components, systems, prefabs, scripts."
readme = "README.md"

[package.metadata.nexus]
spec = "docs/specs/genres/rpg.md"
laws = ["2", "3", "7", "11", "12", "14"]

[lints]
workspace = true

[dependencies]
nexus-core = { path = "../../nexus-core" }
nexus-script = { path = "../../nexus-script" }
