# SPDX-License-Identifier: MIT
# Copyright (c) 2026 Nexus Engine contributors

[package]
name = "nexus-genre-rts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "RTS genre module."
readme = "README.md"

[package.metadata.nexus]
spec = "docs/specs/genres/rts.md"
laws = ["2", "3", "7", "11", "12", "14"]

[lints]
workspace = true

[dependencies]
nexus-core = { path = "../../nexus-core", version = "0.1.0" }
nexus-script = { path = "../../nexus-script", version = "0.1.0" }
