[package]
name = "nexus-agent-sdk-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust client SDK for the Nexus Agent API (JSON-RPC over QUIC/WS)."
readme = "README.md"

[package.metadata.nexus]
spec = "docs/specs/agent/api.md"
laws = ["1", "2", "7", "10", "11"]

[lints]
workspace = true

[dependencies]
