[package]
name = "nexus-style-2d"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "2D rendering style module (sprites, tilemaps, parallax)."
readme = "README.md"

[package.metadata.nexus]
spec = "docs/specs/styles/2d.md"
laws = ["2", "3", "5", "7", "11", "12", "14"]

[lints]
workspace = true

[dependencies]
nexus-core = { path = "../../nexus-core" }
nexus-renderer = { path = "../../nexus-renderer" }
nexus-assets = { path = "../../nexus-assets" }
