[package]
name = "nexus-style-mixed"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Mixed-style rendering module (2D+3D, 2.5D, hybrid pipelines)."
readme = "README.md"

[package.metadata.nexus]
spec = "docs/specs/styles/mixed.md"
laws = ["2", "3", "5", "7", "11", "12", "14"]

[lints]
workspace = true

[dependencies]
nexus-core = { path = "../../nexus-core" }
nexus-renderer = { path = "../../nexus-renderer" }
nexus-assets = { path = "../../nexus-assets" }
